fix config, fix instruction

--- a/docker_compose/.env
+++ b/docker_compose/.env
@@ -7,7 +7,7 @@ MYSQL_ROOT_PASSWORD=root
 ########################################################################
 # PHP
 ########################################################################
-PHP_PORT=80 # if you change default port you have to use it in url
+PHP_PORT=9001
 PHP_XDEBUG_MODE=off
 PHP_XDEBUG_CLIENT_PORT=5902
 PHP_XDEBUG_CLIENT_HOST=host.docker.internal
@@ -20,5 +20,5 @@ PHPMYADMIN_PORT=8080
 ########################################################################
 # NGINX
 ########################################################################
-NGINX_PORT=8001
+NGINX_PORT=8001 # if you change default port you have to use it in url
 NGINX_SYMFONY_SERVER_NAME=symfony.localhost
